// This is the public API offered by your entity.
syntax = "proto3";

package com.example.deal.api;

import "kalix/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option java_outer_classname = "DealApi";

message DealRequest {
  string brand = 1;
  string changedBy = 2;
  string status = 3;
  string lifecycleStatus = 4;
}

message DealStatus {
  string dealIdx = 1;
  string createdTimestamp = 2;
  string modifiedTimestamp = 3;
  string lifecycleStatus = 4;
  string brand = 5;
  string changedBy = 6;
  string status = 7;
}

message PayDeal {
  string dealIdx = 1 [(kalix.field).entity_key = true];
  string status = 2;
}

message SubmitDeal {
  string dealIdx = 1 [(kalix.field).entity_key = true];
  string status = 2;
}


message GetDealRequest {
  string dealIdx = 1 [(kalix.field).entity_key = true];
}

service DealService {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "com.example.deal.domain.DealEntity"
      entity_type: "deals"
      state: "com.example.deal.domain.DealState"
      events: [
        "com.example.deal.domain.DealSubmitted",
        "com.example.deal.domain.DealPaid",
        "com.example.deal.domain.DealFulfilled",
        "com.example.deal.domain.DealCancelled"]
    }
  };

  rpc CreateDeal (DealRequest) returns (google.protobuf.Empty) {
    option (kalix.method).entity.key_generator = VERSION_4_UUID;
    option (google.api.http) = {
      post: "/deal/create"
      body: "*"
    };
  }

  rpc Pay (PayDeal) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/deal/{dealIdx}/pay"
      body: "*"
    };
  }

  rpc Submit (SubmitDeal) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/deal/{dealIdx}/submit"
      body: "*"
    };
  }

  rpc GetDeal (GetDealRequest) returns (DealStatus) {
  }
}
